crates/sllm-hip-sys/src/bindings.rs

// @generated by bindgen 0.71.1; checked in for reproducible normal builds.
// source: include/sllm/hip.h
// abi_version: 1
// options: --allowlist-type '^sllm_.*' --allowlist-function '^sllm_.*' --allowlist-var '^SLLM_.*' --no-layout-tests

use core::ffi::c_char;

pub type sllm_status_t = u32;

pub const SLLM_HIP_ABI_VERSION: u32 = 1;
pub const SLLM_HIP_LIBRARY_VERSION_MAJOR: u32 = 0;
pub const SLLM_HIP_LIBRARY_VERSION_MINOR: u32 = 1;
pub const SLLM_HIP_LIBRARY_VERSION_PATCH: u32 = 0;

pub const SLLM_STATUS_OK: sllm_status_t = 0;
pub const SLLM_STATUS_INVALID_ARGUMENT: sllm_status_t = 1;
pub const SLLM_STATUS_BUFFER_TOO_SMALL: sllm_status_t = 2;
pub const SLLM_STATUS_UNSUPPORTED: sllm_status_t = 3;
pub const SLLM_STATUS_HIP_UNAVAILABLE: sllm_status_t = 4;
pub const SLLM_STATUS_INVALID_ABI_VERSION: sllm_status_t = 5;
pub const SLLM_STATUS_RESERVED_NONZERO: sllm_status_t = 6;
pub const SLLM_STATUS_INTERNAL_ERROR: sllm_status_t = 7;

pub const SLLM_BACKEND_HIP: u32 = 1;

pub type sllm_access_mode_t = u32;

pub const SLLM_ACCESS_READ: sllm_access_mode_t = 1;
pub const SLLM_ACCESS_WRITE: sllm_access_mode_t = 2;
pub const SLLM_ACCESS_READ_WRITE: sllm_access_mode_t = 3;

#[repr(C)]
pub struct sllm_context_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct sllm_queue_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct sllm_buffer_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct sllm_event_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct sllm_completion_t {
    _private: [u8; 0],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct sllm_error_sink_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub message: *mut c_char,
    pub message_capacity: u64,
    pub message_length: u64,
    pub reserved: [u64; 2],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct sllm_version_info_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub major: u32,
    pub minor: u32,
    pub patch: u32,
    pub reserved: [u32; 3],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct sllm_backend_probe_result_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub backend: u32,
    pub available: u32,
    pub hip_runtime_present: u32,
    pub reserved: [u32; 3],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct sllm_context_probe_result_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub context_present: u32,
    pub hip_available: u32,
    pub reserved: [u32; 4],
}

unsafe extern "C" {
    pub fn sllm_get_abi_version(
        abi_version: *mut u32,
        error_sink: *mut sllm_error_sink_t,
    ) -> sllm_status_t;
    pub fn sllm_query_version(
        version: *mut sllm_version_info_t,
        error_sink: *mut sllm_error_sink_t,
    ) -> sllm_status_t;
    pub fn sllm_backend_probe(
        backend: u32,
        result: *mut sllm_backend_probe_result_t,
        error_sink: *mut sllm_error_sink_t,
    ) -> sllm_status_t;
    pub fn sllm_context_probe(
        context: *const sllm_context_t,
        result: *mut sllm_context_probe_result_t,
        error_sink: *mut sllm_error_sink_t,
    ) -> sllm_status_t;
}
